spade-tests/src/snapshots/spade_tests__parser__missing_semicolon_error_points_to_correct_token.snap
---
source: spade-tests/src/parser.rs
---
fn top() -> bool {
    let a = 1 let b = 2;
    true
}


error: Expected `;`, got `let`
  ┌─ testinput:2:15
  │
2 │     let a = 1 let b = 2;
  │               ^^^ Expected `;`
  │
  = You probably forgot to end this statement with a `;`
  │
2 │     let a = 1; let b = 2;
  │              +

error: Type of expression is not fully known
  ┌─ testinput:2:23
  │
2 │     let a = 1 let b = 2;
  │                       ^ The type of this expression is not fully known
  │
  = note: Found incomplete type: Number<_>
